<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GreenButtonProjectActivity!</string>
    <string name="app_name">BIY</string>
    <string name="copyright">\u00A9 2012 Budget It Yourself</string>
    <string name="go">Go</string>

    <string-array name="strMonths">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="strYears">
        <item>2011</item>
        <item>2012</item>
    </string-array>

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_green_button_login">GreenButtonLoginActivity</string>
    <string name="accounts_and_sync">Account &amp; Sync</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="auto_sync_enabled_message">Auto syncing enabled. Data will be automatically downloaded periodically.</string>
    <string name="auto_sync">Auto Sync</string>

</resources>